feat: Update html file

--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Асинхронний двигун: навіщо потрібен, принцип роботи, конструкція</title>
+    <title>РђСЃРёРЅС…СЂРѕРЅРЅРёР№ РґРІРёРіСѓРЅ: РЅР°РІС–С‰Рѕ РїРѕС‚СЂС–Р±РµРЅ, РїСЂРёРЅС†РёРї СЂРѕР±РѕС‚Рё, РєРѕРЅСЃС‚СЂСѓРєС†С–СЏ</title>
 </head>
 <body>
-<h1>Асинхронний двигун: конструкція</h1>
-<p> Конструкція пристрою досить проста. Основні частини асинхронного двигуна такі:
+<h1>РђСЃРёРЅС…СЂРѕРЅРЅРёР№ РґРІРёРіСѓРЅ: РєРѕРЅСЃС‚СЂСѓРєС†С–СЏ</h1>
+<p> РљРѕРЅСЃС‚СЂСѓРєС†С–СЏ РїСЂРёСЃС‚СЂРѕСЋ РґРѕСЃРёС‚СЊ РїСЂРѕСЃС‚Р°. РћСЃРЅРѕРІРЅС– С‡Р°СЃС‚РёРЅРё Р°СЃРёРЅС…СЂРѕРЅРЅРѕРіРѕ РґРІРёРіСѓРЅР° С‚Р°РєС–:
 
-Статор має форму циліндра. Він збирається із листів сталі. У його осерді є пази, зміщені один до одного на 120°. У них укладається обмотка.
-Ротор. Буває короткозамкненим чи фазним. У першому випадку ротором служить осердя, в якому стрижні з алюмінію закорочені торцевими ущільнювачами. Фазний ротор складається із 3-х фазної обмотки. Пристрій із фазним ротором завжди трифазний, а з короткозамкненим ротором виділяють 3 види асинхронних двигунів – одно-, дво- та трифазні.
-Конструктивні елементи. Це деталі, які у конструкції асинхронного двигуна відповідають за виконання обертальних, охолоджуючих та захисних функцій.</p>
-<img src="https://centr-teh.ru/storage/images/blog/1-cent-teh/rabota-asinhronnogo-dvigatelya/01-rabota-asinhronnogo-dvigatelya-min.jpeg">
-<h1>Що означає асинхронний двигун та його принцип дії</h1>
-<p> Асинхронний це той, у якого в роботі відсутня синхронність, у якого при старті статична і рухлива частини при обертанні мають різну частоту магнітного потоку. Цей показник у рухомого елемента менший, ніж у нерухомого.
+    РЎС‚Р°С‚РѕСЂ РјР°С” С„РѕСЂРјСѓ С†РёР»С–РЅРґСЂР°. Р’С–РЅ Р·Р±РёСЂР°С”С‚СЊСЃСЏ С–Р· Р»РёСЃС‚С–РІ СЃС‚Р°Р»С–. РЈ Р№РѕРіРѕ РѕСЃРµСЂРґС– С” РїР°Р·Рё, Р·РјС–С‰РµРЅС– РѕРґРёРЅ РґРѕ РѕРґРЅРѕРіРѕ РЅР° 120В°. РЈ РЅРёС… СѓРєР»Р°РґР°С”С‚СЊСЃСЏ РѕР±РјРѕС‚РєР°.
+    Р РѕС‚РѕСЂ. Р‘СѓРІР°С” РєРѕСЂРѕС‚РєРѕР·Р°РјРєРЅРµРЅРёРј С‡Рё С„Р°Р·РЅРёРј. РЈ РїРµСЂС€РѕРјСѓ РІРёРїР°РґРєСѓ СЂРѕС‚РѕСЂРѕРј СЃР»СѓР¶РёС‚СЊ РѕСЃРµСЂРґСЏ, РІ СЏРєРѕРјСѓ СЃС‚СЂРёР¶РЅС– Р· Р°Р»СЋРјС–РЅС–СЋ Р·Р°РєРѕСЂРѕС‡РµРЅС– С‚РѕСЂС†РµРІРёРјРё СѓС‰С–Р»СЊРЅСЋРІР°С‡Р°РјРё. Р¤Р°Р·РЅРёР№ СЂРѕС‚РѕСЂ СЃРєР»Р°РґР°С”С‚СЊСЃСЏ С–Р· 3-С… С„Р°Р·РЅРѕС— РѕР±РјРѕС‚РєРё. РџСЂРёСЃС‚СЂС–Р№ С–Р· С„Р°Р·РЅРёРј СЂРѕС‚РѕСЂРѕРј Р·Р°РІР¶РґРё С‚СЂРёС„Р°Р·РЅРёР№, Р° Р· РєРѕСЂРѕС‚РєРѕР·Р°РјРєРЅРµРЅРёРј СЂРѕС‚РѕСЂРѕРј РІРёРґС–Р»СЏСЋС‚СЊ 3 РІРёРґРё Р°СЃРёРЅС…СЂРѕРЅРЅРёС… РґРІРёРіСѓРЅС–РІ вЂ“ РѕРґРЅРѕ-, РґРІРѕ- С‚Р° С‚СЂРёС„Р°Р·РЅС–.
+    РљРѕРЅСЃС‚СЂСѓРєС‚РёРІРЅС– РµР»РµРјРµРЅС‚Рё. Р¦Рµ РґРµС‚Р°Р»С–, СЏРєС– Сѓ РєРѕРЅСЃС‚СЂСѓРєС†С–С— Р°СЃРёРЅС…СЂРѕРЅРЅРѕРіРѕ РґРІРёРіСѓРЅР° РІС–РґРїРѕРІС–РґР°СЋС‚СЊ Р·Р° РІРёРєРѕРЅР°РЅРЅСЏ РѕР±РµСЂС‚Р°Р»СЊРЅРёС…, РѕС…РѕР»РѕРґР¶СѓСЋС‡РёС… С‚Р° Р·Р°С…РёСЃРЅРёС… С„СѓРЅРєС†С–Р№.</p>
+<img src="https://centr-teh.ru/storage/images/blog/1-cent-teh/rabota-asinhronnogo-dvigatelya/01-rabota-asinhronnogo-dvigatelya-min.jpeg" alt="hui ebaniy rot blyat"/>
+<h1>Р©Рѕ РѕР·РЅР°С‡Р°С” Р°СЃРёРЅС…СЂРѕРЅРЅРёР№ РґРІРёРіСѓРЅ С‚Р° Р№РѕРіРѕ РїСЂРёРЅС†РёРї РґС–С—</h1>
+<p> РђСЃРёРЅС…СЂРѕРЅРЅРёР№ С†Рµ С‚РѕР№, Сѓ СЏРєРѕРіРѕ РІ СЂРѕР±РѕС‚С– РІС–РґСЃСѓС‚РЅСЏ СЃРёРЅС…СЂРѕРЅРЅС–СЃС‚СЊ, Сѓ СЏРєРѕРіРѕ РїСЂРё СЃС‚Р°СЂС‚С– СЃС‚Р°С‚РёС‡РЅР° С– СЂСѓС…Р»РёРІР° С‡Р°СЃС‚РёРЅРё РїСЂРё РѕР±РµСЂС‚Р°РЅРЅС– РјР°СЋС‚СЊ СЂС–Р·РЅСѓ С‡Р°СЃС‚РѕС‚Сѓ РјР°РіРЅС–С‚РЅРѕРіРѕ РїРѕС‚РѕРєСѓ. Р¦РµР№ РїРѕРєР°Р·РЅРёРє Сѓ СЂСѓС…РѕРјРѕРіРѕ РµР»РµРјРµРЅС‚Р° РјРµРЅС€РёР№, РЅС–Р¶ Сѓ РЅРµСЂСѓС…РѕРјРѕРіРѕ.
 
-Розглянемо принцип роботи асинхронного двигуна на прикладі: достатньо взяти постійний магніт і почати обертати його навколо своєї осі на невеликій відстані від диска з міді. Незабаром диск починає обертання, слідуючи за магнітом. Така поведінка диска пояснюється тим, що через магніт, що обертається поблизу, в ньому з'являються струми Фуко, які рухаються по замкнутому контуру. Це струми короткого замикання, що нагрівають металеву конструкцію. У диску з'являється власний магнітний потік, який починає взаємодіяти з полем магніту.
+    Р РѕР·РіР»СЏРЅРµРјРѕ РїСЂРёРЅС†РёРї СЂРѕР±РѕС‚Рё Р°СЃРёРЅС…СЂРѕРЅРЅРѕРіРѕ РґРІРёРіСѓРЅР° РЅР° РїСЂРёРєР»Р°РґС–: РґРѕСЃС‚Р°С‚РЅСЊРѕ РІР·СЏС‚Рё РїРѕСЃС‚С–Р№РЅРёР№ РјР°РіРЅС–С‚ С– РїРѕС‡Р°С‚Рё РѕР±РµСЂС‚Р°С‚Рё Р№РѕРіРѕ РЅР°РІРєРѕР»Рѕ СЃРІРѕС”С— РѕСЃС– РЅР° РЅРµРІРµР»РёРєС–Р№ РІС–РґСЃС‚Р°РЅС– РІС–Рґ РґРёСЃРєР° Р· РјС–РґС–. РќРµР·Р°Р±Р°СЂРѕРј РґРёСЃРє РїРѕС‡РёРЅР°С” РѕР±РµСЂС‚Р°РЅРЅСЏ, СЃР»С–РґСѓСЋС‡Рё Р·Р° РјР°РіРЅС–С‚РѕРј. РўР°РєР° РїРѕРІРµРґС–РЅРєР° РґРёСЃРєР° РїРѕСЏСЃРЅСЋС”С‚СЊСЃСЏ С‚РёРј, С‰Рѕ С‡РµСЂРµР· РјР°РіРЅС–С‚, С‰Рѕ РѕР±РµСЂС‚Р°С”С‚СЊСЃСЏ РїРѕР±Р»РёР·Сѓ, РІ РЅСЊРѕРјСѓ Р·'СЏРІР»СЏСЋС‚СЊСЃСЏ СЃС‚СЂСѓРјРё Р¤СѓРєРѕ, СЏРєС– СЂСѓС…Р°СЋС‚СЊСЃСЏ РїРѕ Р·Р°РјРєРЅСѓС‚РѕРјСѓ РєРѕРЅС‚СѓСЂСѓ. Р¦Рµ СЃС‚СЂСѓРјРё РєРѕСЂРѕС‚РєРѕРіРѕ Р·Р°РјРёРєР°РЅРЅСЏ, С‰Рѕ РЅР°РіСЂС–РІР°СЋС‚СЊ РјРµС‚Р°Р»РµРІСѓ РєРѕРЅСЃС‚СЂСѓРєС†С–СЋ. РЈ РґРёСЃРєСѓ Р·'СЏРІР»СЏС”С‚СЊСЃСЏ РІР»Р°СЃРЅРёР№ РјР°РіРЅС–С‚РЅРёР№ РїРѕС‚С–Рє, СЏРєРёР№ РїРѕС‡РёРЅР°С” РІР·Р°С”РјРѕРґС–СЏС‚Рё Р· РїРѕР»РµРј РјР°РіРЅС–С‚Сѓ.
 
-В асинхронному електромоторі джерелом поля, що обертає, виступають обмотки статора. Під дією утвореного обмотками магнітного потоку в провідниках елемента, що обертається, формується електрорушійна сила. Коли магнітний потік статора починає взаємодіяти з струмом, що індукується в обмотці обертової частини, з'являється електромагнітна сила. Вона починає обертати вал електродвигуна.
+    Р’ Р°СЃРёРЅС…СЂРѕРЅРЅРѕРјСѓ РµР»РµРєС‚СЂРѕРјРѕС‚РѕСЂС– РґР¶РµСЂРµР»РѕРј РїРѕР»СЏ, С‰Рѕ РѕР±РµСЂС‚Р°С”, РІРёСЃС‚СѓРїР°СЋС‚СЊ РѕР±РјРѕС‚РєРё СЃС‚Р°С‚РѕСЂР°. РџС–Рґ РґС–С”СЋ СѓС‚РІРѕСЂРµРЅРѕРіРѕ РѕР±РјРѕС‚РєР°РјРё РјР°РіРЅС–С‚РЅРѕРіРѕ РїРѕС‚РѕРєСѓ РІ РїСЂРѕРІС–РґРЅРёРєР°С… РµР»РµРјРµРЅС‚Р°, С‰Рѕ РѕР±РµСЂС‚Р°С”С‚СЊСЃСЏ, С„РѕСЂРјСѓС”С‚СЊСЃСЏ РµР»РµРєС‚СЂРѕСЂСѓС€С–Р№РЅР° СЃРёР»Р°. РљРѕР»Рё РјР°РіРЅС–С‚РЅРёР№ РїРѕС‚С–Рє СЃС‚Р°С‚РѕСЂР° РїРѕС‡РёРЅР°С” РІР·Р°С”РјРѕРґС–СЏС‚Рё Р· СЃС‚СЂСѓРјРѕРј, С‰Рѕ С–РЅРґСѓРєСѓС”С‚СЊСЃСЏ РІ РѕР±РјРѕС‚С†С– РѕР±РµСЂС‚РѕРІРѕС— С‡Р°СЃС‚РёРЅРё, Р·'СЏРІР»СЏС”С‚СЊСЃСЏ РµР»РµРєС‚СЂРѕРјР°РіРЅС–С‚РЅР° СЃРёР»Р°. Р’РѕРЅР° РїРѕС‡РёРЅР°С” РѕР±РµСЂС‚Р°С‚Рё РІР°Р» РµР»РµРєС‚СЂРѕРґРІРёРіСѓРЅР°.
 
-Щоб зрозуміти, як працює асинхронний двигун, представимо дії, що відбуваються в ньому, покроково:
+    Р©РѕР± Р·СЂРѕР·СѓРјС–С‚Рё, СЏРє РїСЂР°С†СЋС” Р°СЃРёРЅС…СЂРѕРЅРЅРёР№ РґРІРёРіСѓРЅ, РїСЂРµРґСЃС‚Р°РІРёРјРѕ РґС–С—, С‰Рѕ РІС–РґР±СѓРІР°СЋС‚СЊСЃСЏ РІ РЅСЊРѕРјСѓ, РїРѕРєСЂРѕРєРѕРІРѕ:
 
-Двигун запускається, і магнітний потік нерухомої частини перетинає контур елемента, що обертається, формуючи електрорушійну силу.
-У короткозамкненому роторі утворюється змінний струм.
-Під дією магнітних потоків нерухомої і обертової частини утворюється момент, що крутить.
-Елемент, що обертається, прагне до поля нерухомої частини.
-У певний момент у нерухомої і обертової частини двигуна збігається частота обертання магнітного потоку, тоді момент, що крутить, дорівнює 0, що призводить до загасання електромагнітних проявів в обертовому елементі двигуна.
-Контур ротора починає відставати, магнітний потік статора починає збуджувати його.
-Повільність ротора в порівнянні з магнітним полем статора і забезпечує несинхронну роботу електродвигуна.
+    Р”РІРёРіСѓРЅ Р·Р°РїСѓСЃРєР°С”С‚СЊСЃСЏ, С– РјР°РіРЅС–С‚РЅРёР№ РїРѕС‚С–Рє РЅРµСЂСѓС…РѕРјРѕС— С‡Р°СЃС‚РёРЅРё РїРµСЂРµС‚РёРЅР°С” РєРѕРЅС‚СѓСЂ РµР»РµРјРµРЅС‚Р°, С‰Рѕ РѕР±РµСЂС‚Р°С”С‚СЊСЃСЏ, С„РѕСЂРјСѓСЋС‡Рё РµР»РµРєС‚СЂРѕСЂСѓС€С–Р№РЅСѓ СЃРёР»Сѓ.
+    РЈ РєРѕСЂРѕС‚РєРѕР·Р°РјРєРЅРµРЅРѕРјСѓ СЂРѕС‚РѕСЂС– СѓС‚РІРѕСЂСЋС”С‚СЊСЃСЏ Р·РјС–РЅРЅРёР№ СЃС‚СЂСѓРј.
+    РџС–Рґ РґС–С”СЋ РјР°РіРЅС–С‚РЅРёС… РїРѕС‚РѕРєС–РІ РЅРµСЂСѓС…РѕРјРѕС— С– РѕР±РµСЂС‚РѕРІРѕС— С‡Р°СЃС‚РёРЅРё СѓС‚РІРѕСЂСЋС”С‚СЊСЃСЏ РјРѕРјРµРЅС‚, С‰Рѕ РєСЂСѓС‚РёС‚СЊ.
+    Р•Р»РµРјРµРЅС‚, С‰Рѕ РѕР±РµСЂС‚Р°С”С‚СЊСЃСЏ, РїСЂР°РіРЅРµ РґРѕ РїРѕР»СЏ РЅРµСЂСѓС…РѕРјРѕС— С‡Р°СЃС‚РёРЅРё.
+    РЈ РїРµРІРЅРёР№ РјРѕРјРµРЅС‚ Сѓ РЅРµСЂСѓС…РѕРјРѕС— С– РѕР±РµСЂС‚РѕРІРѕС— С‡Р°СЃС‚РёРЅРё РґРІРёРіСѓРЅР° Р·Р±С–РіР°С”С‚СЊСЃСЏ С‡Р°СЃС‚РѕС‚Р° РѕР±РµСЂС‚Р°РЅРЅСЏ РјР°РіРЅС–С‚РЅРѕРіРѕ РїРѕС‚РѕРєСѓ, С‚РѕРґС– РјРѕРјРµРЅС‚, С‰Рѕ РєСЂСѓС‚РёС‚СЊ, РґРѕСЂС–РІРЅСЋС” 0, С‰Рѕ РїСЂРёР·РІРѕРґРёС‚СЊ РґРѕ Р·Р°РіР°СЃР°РЅРЅСЏ РµР»РµРєС‚СЂРѕРјР°РіРЅС–С‚РЅРёС… РїСЂРѕСЏРІС–РІ РІ РѕР±РµСЂС‚РѕРІРѕРјСѓ РµР»РµРјРµРЅС‚С– РґРІРёРіСѓРЅР°.
+    РљРѕРЅС‚СѓСЂ СЂРѕС‚РѕСЂР° РїРѕС‡РёРЅР°С” РІС–РґСЃС‚Р°РІР°С‚Рё, РјР°РіРЅС–С‚РЅРёР№ РїРѕС‚С–Рє СЃС‚Р°С‚РѕСЂР° РїРѕС‡РёРЅР°С” Р·Р±СѓРґР¶СѓРІР°С‚Рё Р№РѕРіРѕ.
+    РџРѕРІС–Р»СЊРЅС–СЃС‚СЊ СЂРѕС‚РѕСЂР° РІ РїРѕСЂС–РІРЅСЏРЅРЅС– Р· РјР°РіРЅС–С‚РЅРёРј РїРѕР»РµРј СЃС‚Р°С‚РѕСЂР° С– Р·Р°Р±РµР·РїРµС‡СѓС” РЅРµСЃРёРЅС…СЂРѕРЅРЅСѓ СЂРѕР±РѕС‚Сѓ РµР»РµРєС‚СЂРѕРґРІРёРіСѓРЅР°.
 
-Формування струму в роторі відбувається безконтактно, тому не потрібно встановлювати у пристрої ковзні контакти. Ця особливість електродвигуна робить його більш ефективним та надійним. Змінити напрямок обертання мотора можна, змінивши фази на клемах однієї з обмоток. Напрямок електромагнітної сили можна визначити за «правилом буравчика».
-<h1>Переваги пристрою</h1>
-<p> Головними достоїнствами асинхронних двигунів є простота їх конструкції та легкість використання.
+    Р¤РѕСЂРјСѓРІР°РЅРЅСЏ СЃС‚СЂСѓРјСѓ РІ СЂРѕС‚РѕСЂС– РІС–РґР±СѓРІР°С”С‚СЊСЃСЏ Р±РµР·РєРѕРЅС‚Р°РєС‚РЅРѕ, С‚РѕРјСѓ РЅРµ РїРѕС‚СЂС–Р±РЅРѕ РІСЃС‚Р°РЅРѕРІР»СЋРІР°С‚Рё Сѓ РїСЂРёСЃС‚СЂРѕС— РєРѕРІР·РЅС– РєРѕРЅС‚Р°РєС‚Рё. Р¦СЏ РѕСЃРѕР±Р»РёРІС–СЃС‚СЊ РµР»РµРєС‚СЂРѕРґРІРёРіСѓРЅР° СЂРѕР±РёС‚СЊ Р№РѕРіРѕ Р±С–Р»СЊС€ РµС„РµРєС‚РёРІРЅРёРј С‚Р° РЅР°РґС–Р№РЅРёРј. Р—РјС–РЅРёС‚Рё РЅР°РїСЂСЏРјРѕРє РѕР±РµСЂС‚Р°РЅРЅСЏ РјРѕС‚РѕСЂР° РјРѕР¶РЅР°, Р·РјС–РЅРёРІС€Рё С„Р°Р·Рё РЅР° РєР»РµРјР°С… РѕРґРЅС–С”С— Р· РѕР±РјРѕС‚РѕРє. РќР°РїСЂСЏРјРѕРє РµР»РµРєС‚СЂРѕРјР°РіРЅС–С‚РЅРѕС— СЃРёР»Рё РјРѕР¶РЅР° РІРёР·РЅР°С‡РёС‚Рё Р·Р° В«РїСЂР°РІРёР»РѕРј Р±СѓСЂР°РІС‡РёРєР°В».</p>
+<h1>РџРµСЂРµРІР°РіРё РїСЂРёСЃС‚СЂРѕСЋ</h1>
+<p> Р“РѕР»РѕРІРЅРёРјРё РґРѕСЃС‚РѕС—РЅСЃС‚РІР°РјРё Р°СЃРёРЅС…СЂРѕРЅРЅРёС… РґРІРёРіСѓРЅС–РІ С” РїСЂРѕСЃС‚РѕС‚Р° С—С… РєРѕРЅСЃС‚СЂСѓРєС†С–С— С‚Р° Р»РµРіРєС–СЃС‚СЊ РІРёРєРѕСЂРёСЃС‚Р°РЅРЅСЏ.
 
-Надійність та довговічність. Через безконтактну взаємодію між основними деталями пристрою воно рідко ламається і не зношується;
-Доступна ціна. Проста конструкція та недорога сировина для виробництва електродвигунів забезпечує низьку вартість обладнання;
-Простий принцип використання. Для роботи з асинхронним двигуном не потрібно мати спеціальні навички.
-Універсальність. Електродвигун асинхронного типу встановлюється практично у будь-яке обладнання.
-Ці переваги пояснюють широке застосування асинхронних двигунів у всіх галузях промисловості та сферах людського життя.
-
-
-
+    РќР°РґС–Р№РЅС–СЃС‚СЊ С‚Р° РґРѕРІРіРѕРІС–С‡РЅС–СЃС‚СЊ. Р§РµСЂРµР· Р±РµР·РєРѕРЅС‚Р°РєС‚РЅСѓ РІР·Р°С”РјРѕРґС–СЋ РјС–Р¶ РѕСЃРЅРѕРІРЅРёРјРё РґРµС‚Р°Р»СЏРјРё РїСЂРёСЃС‚СЂРѕСЋ РІРѕРЅРѕ СЂС–РґРєРѕ Р»Р°РјР°С”С‚СЊСЃСЏ С– РЅРµ Р·РЅРѕС€СѓС”С‚СЊСЃСЏ;
+    Р”РѕСЃС‚СѓРїРЅР° С†С–РЅР°. РџСЂРѕСЃС‚Р° РєРѕРЅСЃС‚СЂСѓРєС†С–СЏ С‚Р° РЅРµРґРѕСЂРѕРіР° СЃРёСЂРѕРІРёРЅР° РґР»СЏ РІРёСЂРѕР±РЅРёС†С‚РІР° РµР»РµРєС‚СЂРѕРґРІРёРіСѓРЅС–РІ Р·Р°Р±РµР·РїРµС‡СѓС” РЅРёР·СЊРєСѓ РІР°СЂС‚С–СЃС‚СЊ РѕР±Р»Р°РґРЅР°РЅРЅСЏ;
+    РџСЂРѕСЃС‚РёР№ РїСЂРёРЅС†РёРї РІРёРєРѕСЂРёСЃС‚Р°РЅРЅСЏ. Р”Р»СЏ СЂРѕР±РѕС‚Рё Р· Р°СЃРёРЅС…СЂРѕРЅРЅРёРј РґРІРёРіСѓРЅРѕРј РЅРµ РїРѕС‚СЂС–Р±РЅРѕ РјР°С‚Рё СЃРїРµС†С–Р°Р»СЊРЅС– РЅР°РІРёС‡РєРё.
+    РЈРЅС–РІРµСЂСЃР°Р»СЊРЅС–СЃС‚СЊ. Р•Р»РµРєС‚СЂРѕРґРІРёРіСѓРЅ Р°СЃРёРЅС…СЂРѕРЅРЅРѕРіРѕ С‚РёРїСѓ РІСЃС‚Р°РЅРѕРІР»СЋС”С‚СЊСЃСЏ РїСЂР°РєС‚РёС‡РЅРѕ Сѓ Р±СѓРґСЊ-СЏРєРµ РѕР±Р»Р°РґРЅР°РЅРЅСЏ.
+    Р¦С– РїРµСЂРµРІР°РіРё РїРѕСЏСЃРЅСЋСЋС‚СЊ С€РёСЂРѕРєРµ Р·Р°СЃС‚РѕСЃСѓРІР°РЅРЅСЏ Р°СЃРёРЅС…СЂРѕРЅРЅРёС… РґРІРёРіСѓРЅС–РІ Сѓ РІСЃС–С… РіР°Р»СѓР·СЏС… РїСЂРѕРјРёСЃР»РѕРІРѕСЃС‚С– С‚Р° СЃС„РµСЂР°С… Р»СЋРґСЃСЊРєРѕРіРѕ Р¶РёС‚С‚СЏ.
+</p>
+</body>
