--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
+    <meta charset="UTF-8">
     <title>Асинхронний двигун: навіщо потрібен, принцип роботи, конструкція</title>
 </head>
 <body>
-<h1>Асинхронний двигун: конструкція</h1>
-<p> Конструкція пристрою досить проста. Основні частини асинхронного двигуна такі:
+<h1>Асинхронний двигун</h1>
 
-    Статор має форму циліндра. Він збирається із листів сталі. У його осерді є пази, зміщені один до одного на 120°. У них укладається обмотка.
-    Ротор. Буває короткозамкненим чи фазним. У першому випадку ротором служить осердя, в якому стрижні з алюмінію закорочені торцевими ущільнювачами. Фазний ротор складається із 3-х фазної обмотки. Пристрій із фазним ротором завжди трифазний, а з короткозамкненим ротором виділяють 3 види асинхронних двигунів – одно-, дво- та трифазні.
-    Конструктивні елементи. Це деталі, які у конструкції асинхронного двигуна відповідають за виконання обертальних, охолоджуючих та захисних функцій.</p>
-<img src="https://centr-teh.ru/storage/images/blog/1-cent-teh/rabota-asinhronnogo-dvigatelya/01-rabota-asinhronnogo-dvigatelya-min.jpeg" alt="hui ebaniy rot blyat"/>
-<h1>Що означає асинхронний двигун та його принцип дії</h1>
-<p> Асинхронний це той, у якого в роботі відсутня синхронність, у якого при старті статична і рухлива частини при обертанні мають різну частоту магнітного потоку. Цей показник у рухомого елемента менший, ніж у нерухомого.
+<h2>Конструкція</h2>
+<p>Конструкція пристрою досить проста. Основні частини асинхронного двигуна такі:</p>
+<ul>
+    <li><strong>Статор:</strong> має форму циліндра. Він збирається із листів сталі. У його осерді є пази, зміщені один до одного на 120°. У них укладається обмотка.</li>
+    <li><strong>Ротор:</strong> буває короткозамкненим чи фазним. У першому випадку ротором служить осердя, в якому стрижні з алюмінію закорочені торцевими ущільнювачами. Фазний ротор складається із 3-фазної обмотки. Пристрій із фазним ротором завжди трифазний, а з короткозамкненим ротором виділяють 3 види асинхронних двигунів – одно-, дво- та трифазні.</li>
+    <li><strong>Конструктивні елементи:</strong> це деталі, які відповідають за виконання обертальних, охолоджуючих та захисних функцій.</li>
+</ul>
 
-    Розглянемо принцип роботи асинхронного двигуна на прикладі: достатньо взяти постійний магніт і почати обертати його навколо своєї осі на невеликій відстані від диска з міді. Незабаром диск починає обертання, слідуючи за магнітом. Така поведінка диска пояснюється тим, що через магніт, що обертається поблизу, в ньому з'являються струми Фуко, які рухаються по замкнутому контуру. Це струми короткого замикання, що нагрівають металеву конструкцію. У диску з'являється власний магнітний потік, який починає взаємодіяти з полем магніту.
+<img src="https://centr-teh.ru/storage/images/blog/1-cent-teh/rabota-asinhronnogo-dvigatelya/01-rabota-asinhronnogo-dvigatelya-min.jpeg"
+     alt="Принцип роботи асинхронного двигуна"
+     title="Схема роботи асинхронного двигуна"
+     width="800" height="400"/>
 
-    В асинхронному електромоторі джерелом поля, що обертає, виступають обмотки статора. Під дією утвореного обмотками магнітного потоку в провідниках елемента, що обертається, формується електрорушійна сила. Коли магнітний потік статора починає взаємодіяти з струмом, що індукується в обмотці обертової частини, з'являється електромагнітна сила. Вона починає обертати вал електродвигуна.
+<h2>Що означає асинхронний двигун та його принцип дії</h2>
+<p><strong>Асинхронний</strong> – це двигун, у якого при старті статична і рухлива частини при обертанні мають різну частоту магнітного потоку. Цей показник у рухомого елемента менший, ніж у нерухомого.</p>
 
-    Щоб зрозуміти, як працює асинхронний двигун, представимо дії, що відбуваються в ньому, покроково:
+<p>Розглянемо принцип роботи асинхронного двигуна:</p>
+<ol>
+    <li>Двигун запускається, і магнітний потік нерухомої частини перетинає контур елемента, що обертається, формуючи електрорушійну силу.</li>
+    <li>У короткозамкненому роторі утворюється змінний струм.</li>
+    <li>Під дією магнітних потоків нерухомої і обертової частини утворюється момент, що крутить.</li>
+    <li>Елемент, що обертається, прагне до поля нерухомої частини.</li>
+    <li>У певний момент у нерухомої і обертової частини двигуна збігається частота обертання магнітного потоку.</li>
+    <li>Контур ротора починає відставати, магнітний потік статора починає збуджувати його.</li>
+</ol>
 
-    Двигун запускається, і магнітний потік нерухомої частини перетинає контур елемента, що обертається, формуючи електрорушійну силу.
-    У короткозамкненому роторі утворюється змінний струм.
-    Під дією магнітних потоків нерухомої і обертової частини утворюється момент, що крутить.
-    Елемент, що обертається, прагне до поля нерухомої частини.
-    У певний момент у нерухомої і обертової частини двигуна збігається частота обертання магнітного потоку, тоді момент, що крутить, дорівнює 0, що призводить до загасання електромагнітних проявів в обертовому елементі двигуна.
-    Контур ротора починає відставати, магнітний потік статора починає збуджувати його.
-    Повільність ротора в порівнянні з магнітним полем статора і забезпечує несинхронну роботу електродвигуна.
+<h2>Переваги пристрою</h2>
+<p>Головними достоїнствами асинхронних двигунів є:</p>
+<ul>
+    <li><strong>Надійність та довговічність:</strong> безконтактна взаємодія між основними деталями забезпечує високу надійність.</li>
+    <li><strong>Доступна ціна:</strong> проста конструкція та недорога сировина забезпечують низьку вартість.</li>
+    <li><strong>Простий принцип використання:</strong> не потрібні спеціальні навички.</li>
+    <li><strong>Універсальність:</strong> підходить для будь-якого обладнання.</li>
+</ul>
 
-    Формування струму в роторі відбувається безконтактно, тому не потрібно встановлювати у пристрої ковзні контакти. Ця особливість електродвигуна робить його більш ефективним та надійним. Змінити напрямок обертання мотора можна, змінивши фази на клемах однієї з обмоток. Напрямок електромагнітної сили можна визначити за «правилом буравчика».</p>
-<h1>Переваги пристрою</h1>
-<p> Головними достоїнствами асинхронних двигунів є простота їх конструкції та легкість використання.
-
-    Надійність та довговічність. Через безконтактну взаємодію між основними деталями пристрою воно рідко ламається і не зношується;
-    Доступна ціна. Проста конструкція та недорога сировина для виробництва електродвигунів забезпечує низьку вартість обладнання;
-    Простий принцип використання. Для роботи з асинхронним двигуном не потрібно мати спеціальні навички.
-    Універсальність. Електродвигун асинхронного типу встановлюється практично у будь-яке обладнання.
-    Ці переваги пояснюють широке застосування асинхронних двигунів у всіх галузях промисловості та сферах людського життя.
-</p>
 </body>
+</html>
